[package]
name = "libp2prs-cli"
version = "0.1.0"
authors = ["zhongxh <zhong_xiaohong@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
async-std = "1.6.0"
lazy_static = "1.4"
#xcli = { path = "../xcli", version = "0.2.0", package = "xcli" }
xcli = { git = "https://github.com/kingwel-xie/xcli-rs.git", branch = "master"}
libp2prs-core = { path = "../core", version = "0.1.0", package = "libp2prs-core" }
libp2prs-kad = { path = "../protocols/kad", version = "0.1.0", package = "libp2prs-kad" }
libp2prs-swarm = { path = "../swarm", version = "0.1.0", package = "libp2prs-swarm" }